--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -267,7 +267,7 @@ $$
 
 ---
 
-Có 1 file tên **thi-papers.pdf** có lưu thông tin đọc các bài báo sau đây
+Có 1 file tên **thi_papers.pdf** có lưu thông tin đọc các bài báo sau đây
 
 - **chopp duddu et al 2008** A two-dimension growth continuum model of biofilm growth incorporating fluid flow and shear stress based detachment
 - **chopp duddu et al 2007** Combined extended finite element and level set method for biofilm growth
