--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -5,6 +5,7 @@ categories:
   - phd
 maths: 1
 toc: 1
+date: 2018-04-12
 ---
 
 ## How to write?
@@ -28,6 +29,10 @@ Các bài báo cần nhưng chưa download được:
 ---
 
 Cách định nghĩa và hình minh họa của jump và average được cho trong sách *discontinuous galerkin method BOOK - Di Pietro-Ern.pdf* trang 29 pdf. Mesh Faces, Averages and jumps cũng nói khá rõ và chi tiết trong mục 1.2.3 của sách này.
+
+---
+
+Chopp có một note (*chopp NOTE moving interface.pdf*) để nói về interface problem luôn. Trong đây ổng có nhắc về **time step vs time independent**, level set method, fast marching method,
 
 ## Link and locations
 
@@ -53,8 +58,8 @@ Cách định nghĩa và hình minh họa của jump và average được cho tr
 - We also hope to survey existing algorithms and to introduce new ones,...
 - For the sake of simplicity,
 - , viz., (tức là)
-- In the analysis we will frequently use the notation $a \lesssim b$ meaning that $a ≤ Cb$ where $C$ is a positive constant
-  depending only on the shape regularity bound Cρ or the particular form of the problem (1). Trong bài báo của Hansbo (stabilized...)
+- In the analysis we will frequently use the notation $a \lesssim b$ meaning that $a ≤ Cb$ where $C$ is a positive constant depending only on the shape regularity bound Cρ or the particular form of the problem (1). Trong bài báo của Hansbo (stabilized...)
+- 
 
 ## Discussion với cô & Ideas
 
