--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -14,7 +14,7 @@ date: 2018-04-12
 
 ---
 
-**Nhược điểm của phương pháp Hansbo:** this method has two major drawbacks that will be discussed thoroughly. Firstly, the corresponding matrix may become ill conditioned in case jK \ ˝i j is small for all the triangles in the support of a basis function. Secondly, the scheme cannot be simultaneously robust with respect to small cut elements and large contrast problems. 
+**Nhược điểm của phương pháp Hansbo:** this method has two major drawbacks that will be discussed thoroughly. Firstly, the corresponding matrix may become ill conditioned in case $\vert K_i\vert$ is small for all the triangles in the support of a basis function. Secondly, the scheme cannot be simultaneously robust with respect to small cut elements and large contrast problems. 
 
 ## Linh tinh
 
