--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -5,16 +5,14 @@ categories:
   - phd
 maths: 1
 toc: 1
-date: 2018-04-12
+date: 2018-06-22
 ---
 
 ## How to write?
 
-**El-Otmany2015** ổng dành ra 1 chương để viết về NXFEM conforming của Hansbo luôn.
-
----
-
-**Nhược điểm của phương pháp Hansbo:** this method has two major drawbacks that will be discussed thoroughly. Firstly, the corresponding matrix may become ill conditioned in case $\vert K_i\vert$ is small for all the triangles in the support of a basis function. Secondly, the scheme cannot be simultaneously robust with respect to small cut elements and large contrast problems. 
+- **El-Otmany2015** ổng dành ra 1 chương để viết về NXFEM conforming của Hansbo luôn.
+- **Nhược điểm của phương pháp Hansbo:** this method has two major drawbacks that will be discussed thoroughly. Firstly, the corresponding matrix may become ill conditioned in case $\vert K_i\vert$ is small for all the triangles in the support of a basis function. Secondly, the scheme cannot be simultaneously robust with respect to small cut elements and large contrast problems.
+- Vẽ hình thuật toán ứng dụng level set có thể bắt chước Figure 3.1 trong thesis của yuanjun
 
 ## Linh tinh
 
