--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -13,6 +13,7 @@ date: 2018-06-22
 - **El-Otmany2015** ổng dành ra 1 chương để viết về NXFEM conforming của Hansbo luôn.
 - **Nhược điểm của phương pháp Hansbo:** this method has two major drawbacks that will be discussed thoroughly. Firstly, the corresponding matrix may become ill conditioned in case $\vert K_i\vert$ is small for all the triangles in the support of a basis function. Secondly, the scheme cannot be simultaneously robust with respect to small cut elements and large contrast problems.
 - Vẽ hình thuật toán ứng dụng level set có thể bắt chước Figure 3.1 trong thesis của yuanjun
+- Proposition 2.2 trong thesis của mình (inequality mà chứng minh phụ thuộc nhiều vào định nghĩa của $\kappa_i$ có thể tham khảo chứng minh ở Lemma 3.2 trong *hansbo 2014 a cut fem stokes interface.pdf*.
 
 ## Linh tinh
 
