--- a/_posts/maths/2017-03-21-analysis-3.md
+++ b/_posts/maths/2017-03-21-analysis-3.md
@@ -5,8 +5,32 @@ categories:
 toc: 1
 tags: ["energy norm","trace","normal derivative","norm","boundary condition","wellposed","convergence","stokes"]
 maths: 1
-date: 2018-03-21
+date: 2018-08-04
 ---
+
+## 3 types of PDE
+
+Tại sao lại phân loại, phân loại làm sao?
+
+$$
+Au_{xx} + Bu_{xy} + Cu_{yy} + Du_x + Eu_y +Fu = G
+$$
+
+The discriminant
+
+$$
+d = B^2(x_0,y_0) - 4A(x_0,y_0)C(x_0,y_0)
+$$
+
+at that point. At $(x_0,y_0)$ the equation is said to be
+
+- Elliptic if $d<0$
+- Parabolic if $d=0$
+- Hyperbolic if $d>0$
+
+If this is true at all points in a domain $\Omega$, then the equation is said to be elliptic, parabolic, or hyperbolic in that domain.
+
+
 
 ## Distribution sens
 
@@ -96,7 +120,7 @@ We have the following inclusion rule $H^1_0(\Omega)\subset L^2(\Omega)\subset H^
 
 $$
 \Phi \subseteq H, H^{\ast} \subseteq \Phi^{\ast}.
-$$ 
+$$
 
 ---
 
