--- a/_posts/maths/2017-03-21-analysis-1.md
+++ b/_posts/maths/2017-03-21-analysis-1.md
@@ -3,9 +3,10 @@ title: Analysis general note 1
 categories: maths
 maths: 1
 toc: 1
+tags: [analysis series,theorem,principle,equation,inequality]
 ---
 
-> Xem [phần 2](/analysis-2).
+> Xem các phần khác [tại đây](/tags#analysis-series).
 
 ## Divergence theorem (Gauss's theorem)
 
@@ -61,6 +62,55 @@ $$
 Then $T$ is a bounded linear mapping from $W^{k,p}(D)\to L^q(D)$ and $\overline{T(A)}$ is compact in $L^q(D)$ for any bounded subset $A\subset W^{1,p}(D)$.
 
 Cũng trong file của thầy Đức, định lý trên cũng đúng cho $p\in (1,\infty), q\in [1,\infty)$.
+
+## Inequality
+
+**Poincaré inequality, equivalent norms** chuẩn $\Vert{\nabla u}\Vert\_ {L^p(\Omega)} \sim \Vert{u}\Vert\_ {W^{1,p}(\Omega)}$ (cf. [stackexchange](http://math.stackexchange.com/questions/535503/poincare-inequality-implies-equivalent-norms))
+
+**Poincare inequality** : $\Vert{u}\Vert_{L^2(\Omega)} \le C \Vert{\nabla u}\Vert_{L^2(\Omega)}$
+
+---
+
+**Growall inequality** : xem một phiên bản trong sách của Alexandre Ern (cf. **Ern2004**, chapter 6).
+
+
+## Theorems
+
+**Banach's fixed point theorem** : có thể xem Theorem 8.4 p.345 của **Knabner2002**  hoặc section 2.1 của **Vasile2007**
+
+---
+
+Let $U, W$ be subspaces of $V$ . Then $V = U \oplus W$ if and only if for every $v \in V$ there exist unique vectors $u \in U$ and $w \in  W$ such that $v = u + w$.
+
+---
+
+**Riesz Representation Theorem**:
+
+If $T$ is a bounded linear functional on a Hilbert space $H$ then there exists some $g \in H$ such that for every $f \in H$ we have
+$$
+T(f)=\left<{f,g}\right>
+$$
+Moreover, $\left\|{T}\right\|=\left\|{g}\right\|$ (operator norm of $T$ and Hilbert space norm of $g$)
+
+---
+
+**Second Strang Lemma**: Let $u\in V, u_h\in V_h$ be arbitrary. Then
+$$
+\begin{align*}
+        \left\|{u-u_h}\right\|_{a} \le \text{inf}\left\|{u-v_h}\right\|_{v_h}+\text{sup}_{v_h}\dfrac{a(u-u_h,v_h)}{\left\|{v_h}\right\|_{a}}
+    \end{align*}
+$$
+where $\left\|{v}\right\|_{a}=\sqrt{a(v,v)}$.
+
+---
+
+The "**fundamental lemma of the calculus of variations**" or “**Du Bois-Reymond’s lemma**” : Lemma 3.2 trong [link này](/phd/files/dist3.pdf) ([chương 2 thì xem ở đây](/phd/files/dist2.pdf) )và các biến thể của nó. Dưới đây là phát biểu sơ lược lại,
+
+When $f\in L_{1,loc}(\Omega)$ with $\int f(x)\varphi(x)=0$ for all $\varphi\in C^{\infty}_0$ then $f=0$.
+
+---
+
+**Theorem 2.7** (p.56 pdf in **LeDret2013**]) Soit $E$ un espace euclidien (donc de dimension finie) et soit $P:E \to E$ une application continue telle qu'il existe $\rho>0$ pour lequel tout point $x$ sur la sphère de rayon $\rho$ satisfait $P(x)\cdot x \ge 0$.  Il existe alors un point $x_0, \left\|{x_0}\right\|_{}\le \rho$, tel que $P(x_0)=0$. $\Leftarrow$ *Cái này dùng để áp dụng định lý fixed-point theorem chứng minh phương trình nonlinear có nghiệm nè.*
 
 ## Không phân loại
 
@@ -142,6 +192,7 @@ The **jump** and **average**:
   $$
 
 
+**Jump and average** : Xem thêm định nghĩa ở **Definition 3.3.12** của *interface/interface_lic_thesis.pdf*, có định nghia theo `lim`.
 
 ---
 
@@ -227,12 +278,6 @@ $L^2(\Omega)$-**orthogonal projection** onto $V_h \subset L^2(\Omega)$. See more
 
 ---
 
-**Poincaré inequality, equivalent norms** chuẩn $\Vert{\nabla u}\Vert\_ {L^p(\Omega)} \sim \Vert{u}\Vert\_ {W^{1,p}(\Omega)}$ (cf. [stackexchange](http://math.stackexchange.com/questions/535503/poincare-inequality-implies-equivalent-norms))
-
-**Poincare inequality** : $\Vert{u}\Vert_{L^2(\Omega)} \le C \Vert{\nabla u}\Vert_{L^2(\Omega)}$
-
----
-
 Cái cách chứng minh continuos $\vert f(x) \vert \le C \Vert x \Vert$ thì chỉ áp dụng được đối với $f$ linear/bilinear thôi hà. Lúc mình chứng minh hàm $G_h(u,v)$ mà có chứa 1 hạng tử nonlinear, áp dụng cái này bị cô la và bảo không áp dụng được.
 
 ---
@@ -255,10 +300,6 @@ $$
 
 ---
 
-**Jump and average** : Xem thêm định nghĩa ở **Definition 3.3.12** của *interface/interface_lic_thesis.pdf*, có định nghia theo `lim`.
-
----
-
 $M=(A,d)$ is metric space, every convergent sequence  in $M$ is a **Cauchy sequence**. (Mọi dãy hội tụ đều là dãy Cauchy).  Xem chứng minh [ở đây](https://proofwiki.org/wiki/Convergent_Sequence_is_Cauchy_Sequence).
 
 ------
@@ -275,48 +316,7 @@ Lưu ý nếu trong không gian $M$, mọi dãy Cauchy mà hội tụ thì khôn
 
 ---
 
-**Theorem 2.7** (p.56 pdf in **LeDret2013**]) Soit $E$ un espace euclidien (donc de dimension finie) et soit $P:E \to E$ une application continue telle qu'il existe $\rho>0$ pour lequel tout point $x$ sur la sphère de rayon $\rho$ satisfait $P(x)\cdot x \ge 0$.  Il existe alors un point $x_0, \left\|{x_0}\right\|_{}\le \rho$, tel que $P(x_0)=0$. $\Leftarrow$ *Cái này dùng để áp dụng định lý fixed-point theorem chứng minh phương trình nonlinear có nghiệm nè.*
-
----
-
-**Growall inequality** : xem một phiên bản trong sách của Alexandre Ern (cf. **Ern2004**, chapter 6).
-
----
-
 **Posibivity**: (p.285) và **Maximum principle** (p.286) cũng xem ở trong **Ern2004**, chapter 6.
 
----
 
-**Banach's fixed point theorem** : có thể xem Theorem 8.4 p.345 của **Knabner2002**  hoặc section 2.1 của **Vasile2007**
-
----
-
-Let $U, W$ be subspaces of $V$ . Then $V = U \oplus W$ if and only if for every $v \in V$ there exist unique vectors $u \in U$ and $w \in  W$ such that $v = u + w$.
-
----
-
-**Riesz Representation Theorem**:
-
-If $T$ is a bounded linear functional on a Hilbert space $H$ then there exists some $g \in H$ such that for every $f \in H$ we have
-$$
-T(f)=\left<{f,g}\right>
-$$
-Moreover, $\left\|{T}\right\|=\left\|{g}\right\|$ (operator norm of $T$ and Hilbert space norm of $g$)
-
----
-
-**Second Strang Lemma**: Let $u\in V, u_h\in V_h$ be arbitrary. Then
-$$
-\begin{align*}
-        \left\|{u-u_h}\right\|_{a} \le \text{inf}\left\|{u-v_h}\right\|_{v_h}+\text{sup}_{v_h}\dfrac{a(u-u_h,v_h)}{\left\|{v_h}\right\|_{a}}
-    \end{align*}
-$$
-where $\left\|{v}\right\|_{a}=\sqrt{a(v,v)}$.
-
----
-
-The "**fundamental lemma of the calculus of variations**" or “**Du Bois-Reymond’s lemma**” : Lemma 3.2 trong [link này](/phd/files/dist3.pdf) ([chương 2 thì xem ở đây](/phd/files/dist2.pdf) )và các biến thể của nó. Dưới đây là phát biểu sơ lược lại,
-
-When $f\in L_{1,loc}(\Omega)$ with $\int f(x)\varphi(x)=0$ for all $\varphi\in C^{\infty}_0$ then $f=0$.
-
-> Xem [phần 2](/analysis-2).
+> Xem các phần khác [tại đây](/tags#analysis-series).
