--- a/_posts/maths/2017-03-21-analysis-3.md
+++ b/_posts/maths/2017-03-21-analysis-3.md
@@ -3,10 +3,12 @@ title: Analysis general note 3
 categories:
   - maths
 toc: 1
-tags: ["energy norm","trace","normal derivative","norm","boundary condition","wellposed","convergence","stokes"]
-maths: 1
+tags: [norm,boundary condition,convergence,analysis series]
+maths: 1`
 date: 2018-08-04
 ---
+
+> Xem các phần khác [tại đây](/tags#analysis-series).
 
 ## 3 types of PDE
 
@@ -139,3 +141,5 @@ $$
 $$
 \mathrm {ess} \inf f=\sup\{m:\mu (\{x:f(x)<m\})=0\}
 $$
+
+> Xem các phần khác [tại đây](/tags#analysis-series).
