--- a/_posts/it/2018-06-28-cpp-note-1.md
+++ b/_posts/it/2018-06-28-cpp-note-1.md
@@ -2,10 +2,12 @@
 title: C++ note
 categories:
   - it
-tags: ["C++"]
+tags: [C++,coding]
 maths: 1
 toc: 1
 ---
+
+Ghi chú này dành riêng cho C++, không theo thứ tự, dành để search là chính.
 
 {% include toc.html %}
 
