--- a/_posts/maths/2017-03-21-analysis-1.md
+++ b/_posts/maths/2017-03-21-analysis-1.md
@@ -3,7 +3,7 @@ title: Analysis general note 1
 categories: maths
 maths: 1
 toc: 1
-tags: [analysis series,theorem,principle,equation,inequality]
+tags: [analysis series,theorem,principle,analysis]
 ---
 
 > Xem các phần khác [tại đây](/tags#analysis-series).
