--- a/_posts/maths/2017-03-21-analysis-2.md
+++ b/_posts/maths/2017-03-21-analysis-2.md
@@ -3,7 +3,7 @@ title: Analysis general note 2
 categories:
   - maths
 toc: 1
-tags: [norm,boundary condition,convergence,analysis series,theorem]
+tags: [analysis series,analysis]
 maths: 1
 ---
 
