--- a/_posts/maths/2017-03-21-analysis-3.md
+++ b/_posts/maths/2017-03-21-analysis-3.md
@@ -3,7 +3,7 @@ title: Analysis general note 3
 categories:
   - maths
 toc: 1
-tags: [norm,boundary condition,convergence,analysis series]
+tags: [analysis series,analysis]
 maths: 1`
 date: 2018-08-04
 ---
