--- a/_posts/phd/2017-03-21-papers.md
+++ b/_posts/phd/2017-03-21-papers.md
@@ -1,10 +1,9 @@
 ---
 title: Các bài báo/công việc của người khác (papers)
-categories:
-  - maths
-  - phd
+categories: [maths,phd]
+tags: [phd,numerical analysis]
 toc: 1
-tags: ["ghost penalty","interface"]
+tags: [phd,numerical analysis]
 maths: 1
 ---
 
