--- a/_posts/phd/2017-03-21-thesis.md
+++ b/_posts/phd/2017-03-21-thesis.md
@@ -1,8 +1,7 @@
 ---
 title: Note on PhD thesis
-categories:
-  - maths
-  - phd
+categories: [maths,phd]
+tags: [phd]
 maths: 1
 toc: 1
 date: 2018-06-22
