--- a/_posts/maths/2017-03-21-analysis-1.md
+++ b/_posts/maths/2017-03-21-analysis-1.md
@@ -3,7 +3,7 @@ title: Analysis general note 1
 categories: maths
 maths: 1
 toc: 1
-tags: [analysis series,theorem,principle,analysis]
+tags: [analysis series,analysis]
 ---
 
 > Xem các phần khác [tại đây](/tags#analysis-series).
@@ -120,7 +120,7 @@ $$
 \operatorname {supp} (f)=\{x\in X\,|\,f(x)\neq 0\}.
 $$
 
-Smallest subset of $X$. If *f*(*x*) = 0 for all but a finite number of points *x* in *X*, then *f* is said to have **finite support**.
+Smallest subset of $X$. If *f*(*x*) = 0 for all but a finite number of points *x* in *X*, then *f* is said to have **finite support**.
 
 ---
 
@@ -156,7 +156,7 @@ Then:
 
 Còn đây là lý thuyết ở trang [wikibook](https://en.wikibooks.org/wiki/Linear_Algebra/Combining_Subspaces) :
 
-Where $W_1,W_2,\cdots,W_k$  are subspaces of a vector space, their **sum** is the span of their union 
+Where $W_1,W_2,\cdots,W_k$  are subspaces of a vector space, their **sum** is the span of their union 
 $$
 W_1+W_2+\cdots+W_k = [W_1 \cup W_2\cup\cdots\cup W_k  ]
 $$
