--- a/_posts/it/2018-07-28-algorithm-1.md
+++ b/_posts/it/2018-07-28-algorithm-1.md
@@ -1,7 +1,7 @@
 ---
 title: Algorithm 1
 categories: it
-tags: ["algorithm","sort"]
+tags: ["algorithm","sorting"]
 toc: 1
 ---
 
@@ -32,8 +32,11 @@ Loop from i = 1 to n-1.
 	Insert it into sorted sequence arr[0…i-1]
  ~~~
 
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
 ![insertion sort](/images/posts/algorithm/insertionsort.png)
-
+</div>
+<div class="col s12 l6" markdown="1">
 ~~~ python
 # Python program for implementation of Insertion Sort
  
@@ -62,7 +65,8 @@ print ("Sorted array is:")
 for i in range(len(arr)):
     print ("%d" %arr[i])
 ~~~
-
+</div>
+</div>
 
 
 ### Selection sort
@@ -76,7 +80,9 @@ The selection sort algorithm sorts an array by repeatedly finding the minimum el
 
 In every iteration of selection sort, the minimum element (considering ascending order) from the unsorted subarray is picked and moved to the sorted subarray.
 
- ~~~
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
+~~~
 arr[] = 64 25 12 22 11
 
 // Find the minimum element in arr[0...4]
@@ -94,8 +100,9 @@ arr[] = 64 25 12 22 11
 // Find the minimum element in arr[3...4]
 // and place it at beginning of arr[3...4]
 11 12 22 25 64 
- ~~~
-
+~~~
+</div>
+<div class="col s12 l6" markdown="1">
 ~~~ python
 # Python program for implementation of Selection
 # Sort
@@ -121,7 +128,8 @@ print ("Sorted array")
 for i in range(len(A)):
     print("%d" %A[i]), 
 ~~~
-
+</div>
+</div>
 
 
 ### Bubble sort
@@ -164,6 +172,8 @@ for i in range(len(arr)):
 
 ***chia thành 2 nửa + sắp xếp từng nửa + merge lại***
 
+<div class="row d-flex" markdown="1">
+<div class="col s12 l6" markdown="1">
 ~~~
 MergeSort(arr[], l,  r)
 If r > l
@@ -176,8 +186,11 @@ If r > l
      4. Merge the two halves sorted in step 2 and 3:
              Call merge(arr, l, m, r)
 ~~~
-
+</div>
+<div class="col s12 l6" markdown="1">
 ![insertion sort](/images/posts/algorithm/merge-sort.png)
+</div>
+</div>
 
 ~~~ python
 # Python program for implementation of MergeSort
