--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -1,7 +1,7 @@
 ---
-title: "DataQuest 1: Python 1"
+title: "DataQuest 1: Python Introduction"
 categories: [ml, it, data]
-tags: [dataquest]
+tags: [dataquest, python]
 maths: 1
 toc: 1
 date: 2018-09-08
@@ -11,26 +11,166 @@ This note is used for my notes about the [Data Scientist path](https://www.dataq
 
 {% include toc.html %}
 
-## Mission 1
+## Mission 1 - Python basics
 
-{% include more.html content="[Download mission 1: python basics takaway](/files/dataquest/mission-1.pdf)." %}
+{% include download.html content="[Download mission 1: python basics takaway](/files/dataquest/mission-1.pdf)." %}
 
-## Mission 2
+## Mission 2 - Files and loops
 
-{% include more.html content="[Download mission 2: files and loops takeaway](/files/dataquest/mission-2.pdf)." %}
+{% include download.html content="[Download mission 2: files and loops takeaway](/files/dataquest/mission-2.pdf)." %}
 
 - Add an element to a list: `a.append(<element>)`
 - Open a file: `f = open("test.txt", "r")` where `r` as read this file.
 - Read a file content: `a = f.read()`
 - Split a string: `a.split("<symbol>")`
+- **Procedure**:
 
-## Mission 80
+	~~~ python
+	f = open("<file-name>", "r")
+	data = f.read()
+	data_split = data.split("\n")
+	list_of_list = []
+	for row in data_split:
+		list_of_list.append(row.split(","))
+	~~~
 
-{% include more.html content="[Booleans and If Statements: Takeaways](/files/dataquest/mission-80.pdf)." %}
+## Mission 80 - Booleans and If statements
 
-## Mission 3
+{% include download.html content="[Download mission 80 : boolean and if statement takeaway](/files/dataquest/mission-80.pdf)." %}
 
-{% include more.html content="[List Operations: Takeaways](/files/dataquest/mission-3.pdf)." %}
+## Mission 3 - List operators
 
-## Mission 70
+{% include download.html content="[Download mission 3 : list operations takeaway](/files/dataquest/mission-3.pdf)." %}
+
+## Mission 70 - Ditionaries
+
+{% include download.html content="[Download mission 70 : dictionaries takeaway](/files/dataquest/mission-70.pdf)." %}
+
+- Key can be a number.
+- Search key in dict: `<key> in <dict>`
+- Create an empty dictionary: `a = {}`
+
+## Mission 4 - Introduction to functions
+
+{% include download.html content="[Download mission 4: introduction to functions takeaway](/files/dataquest/mission-4.pdf)." %}
+
+- **Structure**
+
+	~~~ python
+	def <function-name>(<input>):
+		<arguments>
+		return <output>
+	~~~
+
+## Mission 28 - Debugging errors
+
+{% include download.html content="[Download mission 28: debugging errors takeaway](/files/dataquest/mission-28.pdf)." %}
+
+- `SyntaxError`: lack of `"` or `de` instead of `def`
+- `IndentationError`: differences indentation for lines.
+- See more the exceptions and [list of errors](https://docs.python.org/3/library/exceptions.html)
+- Runtime errors
+	- `TypeError`: errors in type of variables.
+	- `Traceback`: block of codes may cause the errors.
+	- `ValueError`: convert a string to a float, for example.
+- `IndexError`: try to access an element that's not in a list's index
+- `AttributeError`: try to call a method or attribute on an object that doesn't contain it
+
+## Mission 9 - Guided project: Explore U.S. Births
+
+Sample code
+
+~~~ python
+def month_births(input_lstlst):
+    births_per_month = {}
+    for lst in input_lstlst:
+        if lst[1] in births_per_month:
+            births_per_month[lst[1]] += lst[4]
+        else:
+            births_per_month[lst[1]] = lst[4]
+    return births_per_month
+
+cdc_month_births= month_births(cdc_list)
+cdc_month_births
+~~~
+
+## Mission 5 - Modules
+
+{% include download.html content="[Download mission 5: Module takeaway](/files/dataquest/mission-5.pdf)." %}
+
+A **module** is a collection of functions and variables that have been bundled together in a single file. 
+
+- Read the list with `csv`
+
+	~~~ python
+	import csv
+	f = open("<data>.csv")
+	csvreader = csv.reader(f)
+	data = list(csvreader)
+	~~~
+
+## Mission 66 - Classses and Objects
+
+{% include download.html content="[Download mission 66: Classes and Objects](/files/dataquest/mission-66.pdf)." %}
+
+- Class's name shoule be in **PascalCase** (Capitalize the fiest letter of each word)
+- Internal functions of a class are called **methods**
+- we had to pass in an argument to the `__init__()` method, `self`
+- If you didn't have `self`, then the class wouldn't know where to store the internal data you wanted to keep
+- There is a corresponding between `.type` inside class and `type()` method
+
+	~~~ python
+	class Dataset:
+	    def __init__(self):
+	        self.type = "csv"
+	~~~
+
+- `enumerate`: look for the indexes and get the values corresponding to this index
+
+	~~~ python
+	for idx, value in enumerate(['foo', 'bar']):
+	    print(idx, value)
+	~~~
+
+- `set(<list>)` gives unique variables of this list (or transform a list to be a set)
+- [Python special methods](https://docs.python.org/3/reference/datamodel.html#basic-customization) : like `__init__`
+	-  When we implemented `__init__()`, it told the python interpreter that anything within that method is what we want to initialize when we create our object.
+	-  `__str__`: return display of a dataset
+-  Sample code of `Dataset` class in this mission
+
+	~~~ python
+	class Dataset:
+	    def __init__(self, data):
+	        self.header = data[0]
+	        self.data = data[1:]
+	    
+	    # Add the special method here
+	    def __str__(self):
+	        return str(self.data[0:10])
+	    
+	    def column(self, label):
+	        if label not in self.header:
+	            return None
+	        
+	        index = 0
+	        for idx, element in enumerate(self.header):
+	            if label == element:
+	                index = idx
+	        
+	        column = []
+	        for row in self.data:
+	            column.append(row[index])
+	        return column
+	    
+	        
+	    def count_unique(self, label):
+	        unique_results = set(self.column(label))
+	        count = len(unique_results)
+	        return count
+	
+	nfl_dataset = Dataset(nfl_data)
+	print(nfl_dataset)
+	~~~
+
+## Error Handling
 
