--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -4,10 +4,10 @@ categories: [ml, it, data]
 tags: [dataquest, python]
 maths: 1
 toc: 1
-date: 2018-09-08
+date: 2018-09-09
 ---
 
-This note is used for my notes about the [Data Scientist path](https://www.dataquest.io/path/data-scientist) on **dataquest**.
+This note is used for my notes about the [Data Scientist path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some new-for-me things.
 
 {% include toc.html %}
 
@@ -77,6 +77,8 @@ This note is used for my notes about the [Data Scientist path](https://www.dataq
 - `AttributeError`: try to call a method or attribute on an object that doesn't contain it
 
 ## Mission 9 - Guided project: Explore U.S. Births
+
+{% include download.html content="[Download Reference solution](https://github.com/dataquestio/solutions/blob/master/Mission9Solutions.ipynb)." %}
 
 Sample code
 
@@ -172,5 +174,170 @@ A **module** is a collection of functions and variables that have been bundled t
 	print(nfl_dataset)
 	~~~
 
-## Error Handling
+## Mission 7 - Error Handling
 
+{% include download.html content="[Download mission 7: Error handling takeaway](/files/dataquest/mission-7.pdf)." %}
+
+- If you surround the code that causes an error with a try/except block, the error will be handled, and the code will continue to run:
+
+	~~~ python
+	try:
+	    int('')
+	except Exception:
+	    print("There was an error")
+	~~~
+
+- When the Python interpreter generates an exception, it actually creates an instance of the `Exception` class
+- `except Exception as exc:` assign the instance of the `Exception` class to the variable `exc`.
+- We can use the pass keyword to avoid generating an error (if we don't want to do anything)
+
+	~~~ python
+	try:
+	    int('')
+	except Exception:
+	    pass
+	~~~
+
+## Mission 16 - List Comprehensions
+
+{% include download.html content="[Download mission 16: List Comprehensions takeaway](/files/dataquest/mission-16.pdf)." %}
+
+- `enumerate()`allows us to have 2 variables in the body of a `for` loop.
+- `enumerate` of a list of lists return idx as a idx of rows
+- Using `foor` loop inside 
+
+	~~~ python
+	animal_lengths = [len(animal) for animal in animals]
+	teams = [row[1] for row in nfl_suspensions]
+	~~~
+
+- `None` object (type `NoneType`) and using `var is None` to check
+- `is` check for object equality instead of `==`comparing logical (errors when comparing `True` with `None`)
+-  `<dict>.items()` method, which allows us to iterate through keys and values at the same time.
+
+	~~~ python
+	for key, val in <dict>.items():
+	~~~
+
+## Challenge 17 - Variable Scopes
+
+{% include download.html content="[Download mission 17: Variable Scopes takeaway](/files/dataquest/mission-17.pdf)." %}
+
+- Once we overwrite the `sum` variable with a value, we can't access the function anymore.
+- Local scope variable has the same name with global ones **doesn't** lead to an error!
+- If local var doesn't exist, python will check the global var with the same name and **use it** but **cannot change it**
+- local > global > built-in functions/variables
+- Defind `global <var>` in separated line and then use it later.
+
+## Mission 82 - Regular expressions
+
+{% include download.html content="[Download mission 82: Regular expressions takeaway](/files/dataquest/mission-82.pdf)." %}
+
+- What it is?
+
+	![Regular expression](/images/posts/data/dataquest/regex.png){:.no-border .w-600}
+
+- Another example, looks like wildcat (using `.` as an replacement character)
+
+	![Regular expression 2](/images/posts/data/dataquest/regex-2.png){:.no-border .w-600}
+
+- Some special cases:
+	-  `.` for a character, 
+	-  `^a` all strings start with `a`, 
+	-  `a$` all strings end with `a`
+	-  `[bcr]at` any characters within `[]` can be filled the space
+	-  Using `\` to escape special charaters
+	-  `"cat|dog"` would match `"catfish"` and `"hotdog"` for **begin** and **end** charaters
+	-  `"[0-9]"` will match any character that falls between `0` and `9`
+	-  `"[a-z]"` : lowercase
+	-  `"[0-9]{4}"`: **repeat** the pattern `"[0-9]"` four times by writing
+- Using `re` module (package) for the regular expression.
+- `re.search(regex, string)`: whether is `string` is a match for `regex`
+
+	~~~ python
+	if re.search("^[\[\(][Ss]erious[\]\)]",post[0]) is not None:
+	        serious_start_count += 1
+	~~~
+
+- `re.sub("yo", "hello", "yo world")` gives `"Hello world"`
+- `re.findall("[a-z]", "abc123")` would return `["a", "b", "c"]`, because those are the substrings that match the regex.
+
+## Mission 84 - Dates in Python
+
+{% include download.html content="[Download mission 84: Dates takeaway](/files/dataquest/mission-84.pdf)." %}
+
+**time module**
+
+- `import time`
+- `time` module represents **Unix timestamps** (from the *epoch* - 1970)
+- `time.time()` gives the current timestamp (the number of seconds from epoch)
+- `time.gmtime(<time-stamp>)` give human readable `struct_time` class
+	- `<struct_time>.tm_year` gives year
+	- `<struct_time>.tm_mon` gives month (1-12)
+	- `<struct_time>.tm_mday` gives day (1-31)
+	- `<struct_time>.tm_hour` gives hour (0-23)
+	- `<struct_time>.tm_min` gives minute (0-59)
+
+**datetime module**
+
+- `import datetime`: we can perform arithmetic on time.
+- These `datetime` instances appear similar to `struct_time` instances. Attributes: `year`, `month`, `day`, `hour`, `minute`, `second`, `microsecond`
+- `datetime.datetime.utcnow()` gives the current utc time
+- `datetime.datetime.now()` gives `datetime.datetime(2018, 9, 9, 7, 45, 36, 986100)`
+- `datetime.timedelta` ([cf](https://docs.python.org/3/library/datetime.html#timedelta-objects)) if we want to perform arithmetic.
+	- `datetime.timedelta(weeks = 1, days = 23)`
+	- attributes: `weeks`, `days`, `hours`, `minutes`, `seconds`, `milliseconds`, `microseconds`
+
+	~~~ python
+	import datetime
+	kirks_birthday = datetime.datetime(year = 2233, month = 3, day = 22)
+	diff = datetime.timedelta(weeks = 15)
+	before_kirk = kirks_birthday - diff
+	~~~
+
+- `datetime.datetime.strftime()` ([cf](https://docs.python.org/3/library/datetime.html#strftime-and-strptime-behavior)) converts to human readable
+
+	~~~ python
+	march3 = datetime.datetime(year = 2010, month = 3, day = 3)
+	pretty_march3 = march3.strftime("%b %d, %Y")
+	print(pretty_march3)
+	~~~
+
+- `datetime.datetime.strptime()` contrary to `strftime`
+
+	~~~ python
+	march3 = datetime.datetime.strptime("Mar 03, 2010", "%b %d, %Y")
+	~~~
+
+- `datetime.datetime.fromtimestamp()` converts from **unix timestamp** to **datetime**
+
+## Mission 218 - Guided Project: Exploring Gun Deaths in the US
+
+{% include download.html content="[Download Reference solution](https://github.com/dataquestio/solutions/blob/master/Mission218Solution.ipynb)." %}
+
+- Any beginning setting up
+
+	~~~ python
+	import csv
+	with open("guns.csv", "r") as f:
+	    reader = csv.reader(f)
+	    data = list(reader)
+	print(data[0:5])
+	~~~
+
+- Count how many in each sex type (sample code)
+
+	~~~ python
+	sexes = [row[5] for row in data]
+	sex_counts = {}
+	for item in sexes:
+	    if item in sex_counts:
+	        sex_counts[item] += 1
+	    else:
+	        sex_counts[item] = 1
+	print(sex_counts)
+	~~~
+
+- Remember that: using `<dict>.items()` for dictionary and `enumerates(<list>)` for list in `for key, val in ...`
+
+{% include more.html content="[Go to Dataquest note 2](/dataquest-2.pdf)." %}
