--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -340,4 +340,4 @@ A **module** is a collection of functions and variables that have been bundled t
 
 - Remember that: using `<dict>.items()` for dictionary and `enumerates(<list>)` for list in `for key, val in ...`
 
-{% include more.html content="[Go to Dataquest note 2](/dataquest-2.pdf)." %}
+{% include more.html content="[Go to Dataquest note 2](/dataquest-2)." %}
