--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -8,7 +8,7 @@ toc: 1
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
 
-{% include more.html content="[Go back to Dataquest note 1](/dataquest-1.pdf)." %}
+{% include more.html content="[Go back to Dataquest note 1](/dataquest-1)." %}
 
 {% include toc.html %}
 
