--- a/_posts/dataquest/2018-09-07-dataquest-1.md
+++ b/_posts/dataquest/2018-09-07-dataquest-1.md
@@ -5,6 +5,7 @@ tags: [dataquest, python]
 maths: 1
 toc: 1
 date: 2018-09-09
+comment: 1
 ---
 
 This note is used for my notes about the [Data Scientist path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some new-for-me things.
