--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -4,11 +4,17 @@ categories: [ml, it, data]
 tags: [dataquest, python, numpy, pandas]
 maths: 1
 toc: 1
+comment: 1
 ---
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
 
-{% include more.html content="[Go back to Dataquest note 1](/dataquest-1)." %}
+<div class="see-again">
+<i class="material-icons">settings_backup_restore</i>
+<span markdown="1">
+[Go back to Dataquest note 1](/dataquest-1).
+</span>
+</div>
 
 {% include toc.html %}
 
