--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -5,6 +5,7 @@ tags: [dataquest, python, numpy, pandas]
 maths: 1
 toc: 1
 comment: 1
+date: 2018-09-12
 ---
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
@@ -38,3 +39,35 @@ This note is used for my notes about the [**Data Scientist** path](https://www.d
 	| **rows**             | `list[:3]`                        | `ndarray[:3]`      | the same |
 	| **columns**          | `[row[4] for row in list]`        | `ndarray[:,4]`     |          |
 	| **multiple columns** | `[[row[1], row[3]] for row in a]` | `ndarray[:,[1,3]]` |          |
+
+- `%timeit -r 1 -n 1 python_subset()` : see the time for a single run
+- **numpy** quicker than **list of list** 30 times
+- **Vectorized operators** (elementwise): `+, -, *, /`, `%` (remainder when a divided by b), `**`, `//` (floor division, rounding down to the nearest number)
+- Alternative for `/` is `np.divide(<ndarray1>, <ndarray2>)`
+- **Max/Min/Mean/Median/Sum**: 
+    - Whole array: `<ndarray.min()>` or `np.min(<ndarray>)`. The same for `max, mean, median, sum`.
+    - Each row: `<ndarray.max(axis=1)>`
+    - Each colum: `<ndarray.max(axis=0)>`
+- **Functions vs Methods**: 
+    - Functions act as stand alone segments of code that usually take an input
+    - Methods are special functions that belong to a specific type of object
+- `np.expand_dims(<ndarray>)`:
+    ~~~ python
+    zeros = [0 0 0] # zeros.shape is (3,)
+    zeros_2d = np.expand_dims(zeros,axis=0) # zeros_2d.shape is (1,3)
+    # axis=0 w.r.t row
+    # axxis=1 w.r.t column
+    ~~~
+- `numpy.concatenate([<ndarray1>,<ndarray2>],axis=0)`: combine 2 ndarrays
+
+    ~~~ python
+    ones = [[ 1  1  1]
+            [ 1  1  1]] # shape is (2,3)
+    zeros = [ 0 0 0 ] # 1d
+    zeros_2d = np.expand_dims(zeros,axis=0) # to (1,3)
+    combined = np.concatenate([ones,zeros_2d],axis=0)
+    # result
+    # [[ 1 1 1]
+    #  [ 1 1 1]
+    #  [ 0 0 0]] 
+    ~~~
