ud statistic + dataquest

--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -53,21 +53,39 @@ This note is used for my notes about the [**Data Scientist** path](https://www.d
     - Methods are special functions that belong to a specific type of object
 - `np.expand_dims(<ndarray>)`:
     ~~~ python
-    zeros = [0 0 0] # zeros.shape is (3,)
-    zeros_2d = np.expand_dims(zeros,axis=0) # zeros_2d.shape is (1,3)
-    # axis=0 w.r.t row
-    # axxis=1 w.r.t column
+zeros = [0 0 0] # zeros.shape is (3,)
+zeros_2d = np.expand_dims(zeros,axis=0) # zeros_2d.shape is (1,3)
+# axis=0 w.r.t row
+# axxis=1 w.r.t column
     ~~~
 - `numpy.concatenate([<ndarray1>,<ndarray2>],axis=0)`: combine 2 ndarrays
 
     ~~~ python
-    ones = [[ 1  1  1]
-            [ 1  1  1]] # shape is (2,3)
-    zeros = [ 0 0 0 ] # 1d
-    zeros_2d = np.expand_dims(zeros,axis=0) # to (1,3)
-    combined = np.concatenate([ones,zeros_2d],axis=0)
-    # result
-    # [[ 1 1 1]
-    #  [ 1 1 1]
-    #  [ 0 0 0]] 
+ones = [[ 1  1  1]
+        [ 1  1  1]] # shape is (2,3)
+zeros = [ 0 0 0 ] # 1d
+zeros_2d = np.expand_dims(zeros,axis=0) # to (1,3)
+combined = np.concatenate([ones,zeros_2d],axis=0)
+# result
+# [[ 1 1 1]
+#  [ 1 1 1]
+#  [ 0 0 0]] 
     ~~~
+
+- **Sort**: `np.argsort(<ndarray>)` gives the sorted index of `<ndarray>` (sorting follows elements in ndarray but gives the result in index)
+
+	~~~ python
+fruit = np.array(['o', 'b', 'a', 'g', 'c'])
+sorted_order = np.argsort(fruit) # gives [2, 1, 4, 3, 0]
+fruit[sorted_order] # gives np.array(['a', 'b', 'c', 'g', 'o'])
+	~~~
+
+	NumPy only supports sorting in **ascending order**
+	
+	Can sort one column of an array then apply to the whole by `nd.array[sorted_order]`
+
+## Mission 290 - Boolean Indexing with NumPy
+
+{% include download.html content="[Download mission 290: Boolean Indexing with NumPy](/files/dataquest/mission-290.pdf)." %}
+
+- `np.genfromtxt(filename,delimiter)` : reads a text file into a NumPy ndarray.
