--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -5,7 +5,7 @@ tags: [dataquest, python, numpy, pandas]
 maths: 1
 toc: 1
 comment: 1
-date: 2018-09-12
+date: 2018-09-13
 ---
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
@@ -88,4 +88,8 @@ fruit[sorted_order] # gives np.array(['a', 'b', 'c', 'g', 'o'])
 
 {% include download.html content="[Download mission 290: Boolean Indexing with NumPy](/files/dataquest/mission-290.pdf)." %}
 
-- `np.genfromtxt(filename,delimiter)` : reads a text file into a NumPy ndarray.
+- `taxi = np.genfromtxt('nyc_taxis.csv', delimiter=',', skip_header=1)` : reads a text file into a NumPy ndarray.
+- `<ndarray>.dtype`: see the internal datatype that has been used
+- `taxi = taxi[1:]` removes the first row.
+- `np.array([2,4,6,8]) < 5` gives a boolean array
+- `ndarray[<bool array>]` give a new ndarray but only at True indexes of bool array (remove False indexes)
