--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -93,3 +93,36 @@ fruit[sorted_order] # gives np.array(['a', 'b', 'c', 'g', 'o'])
 - `taxi = taxi[1:]` removes the first row.
 - `np.array([2,4,6,8]) < 5` gives a boolean array
 - `ndarray[<bool array>]` give a new ndarray but only at True indexes of bool array (remove False indexes)
+
+    ~~~ python
+ndadday # 4x3
+bool1 = [True False True True]
+bool2 = [True False True]
+ndarray[bool1] # takes the rows
+ndaary[:,bool2] # takes the columns
+    ~~~
+
+- `c[c[:,1] > 2, 1] = 99`
+- `ndarray.shape` gives a tuple `(#rows, #columns)`.
+    - `ndarray.shape[0]` gives number of rows
+
+
+## Mission 291 - Introduction to Pandas
+
+{% include download.html content="[Download mission 291: Boolean Indexing with NumPy](/files/dataquest/mission-291.pdf)." %}
+
+- `import pandas as pd`
+- `f500 = pd.read_csv("<file-name>", index_col=0)`
+    - `type(f500)` gives `pandas.core.frame.DataFrame`
+    - `f500.shape` gives a tuple `(500, 16)`
+- Unlike NumPy, pandas does not use the same type for 1D and 2D arrays.
+- `f500.dtypes` gives type of each column
+- `f500.head()` returns first 5 rows
+    - `f500.head(10) returns first 10 rows`
+- `f500.tail()`
+- 
+
+
+
+
+
