--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -5,7 +5,7 @@ tags: [dataquest, python, numpy, pandas]
 maths: 1
 toc: 1
 comment: 1
-date: 2018-09-13
+date: 2018-09-18
 ---
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
@@ -52,33 +52,33 @@ This note is used for my notes about the [**Data Scientist** path](https://www.d
     - Functions act as stand alone segments of code that usually take an input
     - Methods are special functions that belong to a specific type of object
 - `np.expand_dims(<ndarray>)`:
-    ~~~ python
-zeros = [0 0 0] # zeros.shape is (3,)
-zeros_2d = np.expand_dims(zeros,axis=0) # zeros_2d.shape is (1,3)
-# axis=0 w.r.t row
-# axxis=1 w.r.t column
-    ~~~
+  ~~~ python
+  zeros = [0 0 0] # zeros.shape is (3,)
+  zeros_2d = np.expand_dims(zeros,axis=0) # zeros_2d.shape is (1,3)
+  # axis=0 w.r.t row
+  # axxis=1 w.r.t column
+  ~~~
 - `numpy.concatenate([<ndarray1>,<ndarray2>],axis=0)`: combine 2 ndarrays
 
-    ~~~ python
-ones = [[ 1  1  1]
+  ~~~ python
+  ones = [[ 1  1  1]
         [ 1  1  1]] # shape is (2,3)
-zeros = [ 0 0 0 ] # 1d
-zeros_2d = np.expand_dims(zeros,axis=0) # to (1,3)
-combined = np.concatenate([ones,zeros_2d],axis=0)
-# result
-# [[ 1 1 1]
-#  [ 1 1 1]
-#  [ 0 0 0]] 
-    ~~~
+  zeros = [ 0 0 0 ] # 1d
+  zeros_2d = np.expand_dims(zeros,axis=0) # to (1,3)
+  combined = np.concatenate([ones,zeros_2d],axis=0)
+  # result
+  # [[ 1 1 1]
+  #  [ 1 1 1]
+  #  [ 0 0 0]] 
+  ~~~
 
 - **Sort**: `np.argsort(<ndarray>)` gives the sorted index of `<ndarray>` (sorting follows elements in ndarray but gives the result in index)
 
-	~~~ python
-fruit = np.array(['o', 'b', 'a', 'g', 'c'])
-sorted_order = np.argsort(fruit) # gives [2, 1, 4, 3, 0]
-fruit[sorted_order] # gives np.array(['a', 'b', 'c', 'g', 'o'])
-	~~~
+  ~~~ python
+  fruit = np.array(['o', 'b', 'a', 'g', 'c'])
+  sorted_order = np.argsort(fruit) # gives [2, 1, 4, 3, 0]
+  fruit[sorted_order] # gives np.array(['a', 'b', 'c', 'g', 'o'])
+  ~~~
 
 	NumPy only supports sorting in **ascending order**
 	
@@ -94,34 +94,74 @@ fruit[sorted_order] # gives np.array(['a', 'b', 'c', 'g', 'o'])
 - `np.array([2,4,6,8]) < 5` gives a boolean array
 - `ndarray[<bool array>]` give a new ndarray but only at True indexes of bool array (remove False indexes)
 
-    ~~~ python
-ndadday # 4x3
-bool1 = [True False True True]
-bool2 = [True False True]
-ndarray[bool1] # takes the rows
-ndaary[:,bool2] # takes the columns
-    ~~~
+  ~~~ python
+  ndadday # 4x3
+  bool1 = [True False True True]
+  bool2 = [True False True]
+  ndarray[bool1] # takes the rows
+  ndaary[:,bool2] # takes the columns
+  ~~~
 
 - `c[c[:,1] > 2, 1] = 99`
 - `ndarray.shape` gives a tuple `(#rows, #columns)`.
-    - `ndarray.shape[0]` gives number of rows
+  - `ndarray.shape[0]` gives number of rows
 
 
 ## Mission 291 - Introduction to Pandas
 
 {% include download.html content="[Download mission 291: Boolean Indexing with NumPy](/files/dataquest/mission-291.pdf)." %}
 
+<div class="see-again">
+<i class="material-icons">settings_backup_restore</i>
+<span markdown="1">
+See the [note of Pandas](/python-pandas-1).
+</span>
+</div>
+
 - `import pandas as pd`
 - `f500 = pd.read_csv("<file-name>", index_col=0)`
     - `type(f500)` gives `pandas.core.frame.DataFrame`
     - `f500.shape` gives a tuple `(500, 16)`
+- **Series** is the pandas type for **one-dimensional** objects (columns, the 1st column is alway the header of pd obj)
+  - <mark>1D pd object $\Rightarrow$ series</mark>
+  - <mark>2D pd object $\Rightarrow$ dataframe</mark>
 - Unlike NumPy, pandas does not use the same type for 1D and 2D arrays.
 - `f500.dtypes` gives type of each column
 - `f500.head()` returns first 5 rows
     - `f500.head(10) returns first 10 rows`
 - `f500.tail()`
-- 
+- Unlike NumPy, pandas does not use the same type for 1D and 2D arrays.
+- Select **rows**:
+  - Single: `df.loc["a"]`
+  - List: `df.loc[["a","b"]]`
+  - Slice: `df["a":"c"]` or `df.loc["a":"c"]`
+- Select **columns**:
+  - Single: `df["a"]` or `df.loc[:,"a"]`
+  - List: `df[["a", "b"]]` or `df.loc[:,["a","b"]]`
+  - Slice: `df.loc[:, ["a":"c"]]`
+- Select rows in **series object**
+  - Single: `s["a"]` or `s.loc["a"]`
+  - List: `s[["a","b"]]` or `s.loc[["a","b"]]`
+  - Slice: `s["a":"c"]` or `s.loc["a":"c"]`
+- `s.describe()`: gives count, mean, std, min, 25%, 50%, 75%, max or other types. (**method chaining**)
 
+	~~~ python
+	revs = f500["revenues"]
+	print(revs.describe())
+	~~~
+- There is also `dataframe.describe()`
+- for **all**: `all_desc = f500.describe(include='all')`
+- for only **numeric**: `print(f500.describe(include=['O']))`
+- **Methods**: `.max()`, `.min()`, `.mean()`, `.median()`, `.mode()`, `.sum()` applied to both **series** and **dataframe**.
+	- `df.<method>(axis=0)` or `df.<method>(axis="index")` calculate along the **row** axis. <mark>default</mark>
+	- `df.<method>(axis=1)` or `df.<method>(axis="column")` calculate along the **column** axis.
+
+		~~~ python
+		medians = f500[["revenues", "profits"]].median(axis=0)
+		# we could also use .median(axis="index")
+		# or without axis=0 because it's default
+		~~~
+- `s.value_counts()`: displays each unique non-null value from a series, with a count of the number of times that value is used. 
 
 
 
