--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -5,7 +5,7 @@ tags: [dataquest, python, numpy, pandas]
 maths: 1
 toc: 1
 comment: 1
-date: 2018-09-18
+date: 2018-09-20
 ---
 
 This note is used for my notes about the [**Data Scientist** path](https://www.dataquest.io/path/data-scientist) on **dataquest**. I take this note after I have some basics on python with [other notes](/tags#python), that's why I just write down some *new-for-me* things.
@@ -130,13 +130,15 @@ See the [note of Pandas](/python-pandas-1).
 - `f500.head()` returns first 5 rows
     - `f500.head(10) returns first 10 rows`
 - `f500.tail()`
-- Unlike NumPy, pandas does not use the same type for 1D and 2D arrays.
+- Unlike NumPy, pandas **does not use the same type** for 1D and 2D arrays.
+- Select **single element**: `df.loc["Sinopec Group", "revenues"]`
 - Select **rows**:
   - Single: `df.loc["a"]`
   - List: `df.loc[["a","b"]]`
   - Slice: `df["a":"c"]` or `df.loc["a":"c"]`
 - Select **columns**:
   - Single: `df["a"]` or `df.loc[:,"a"]`
+	- <update /> `df["a"]` gives a df but `df.loc[:,"a"]` gives a series
   - List: `df[["a", "b"]]` or `df.loc[:,["a","b"]]`
   - Slice: `df.loc[:, ["a":"c"]]`
 - Select rows in **series object**
@@ -146,8 +148,8 @@ See the [note of Pandas](/python-pandas-1).
 - `s.describe()`: gives count, mean, std, min, 25%, 50%, 75%, max or other types. (**method chaining**)
 
 	~~~ python
-	revs = f500["revenues"]
-	print(revs.describe())
+revs = f500["revenues"]
+print(revs.describe())
 	~~~
 - There is also `dataframe.describe()`
 - for **all**: `all_desc = f500.describe(include='all')`
@@ -157,12 +159,99 @@ See the [note of Pandas](/python-pandas-1).
 	- `df.<method>(axis=1)` or `df.<method>(axis="column")` calculate along the **column** axis.
 
 		~~~ python
-		medians = f500[["revenues", "profits"]].median(axis=0)
-		# we could also use .median(axis="index")
-		# or without axis=0 because it's default
+medians = f500[["revenues", "profits"]].median(axis=0)
+# we could also use .median(axis="index")
+# or without axis=0 because it's default
 		~~~
-- `s.value_counts()`: displays each unique non-null value from a series, with a count of the number of times that value is used. 
+- `s.value_counts()`: displays each unique non-null value from a series, with a count of the number of times that value is used.
+	- `s.value_counts(dropna=False)` exclude null values when making calculations.
+- Top 5 most common values of a column
+
+	~~~ python
+top5_countries = f500["country"].value_counts().head()
+	~~~
+- `df.max(numeric_only = True)` **only** display the **numeric** columns
+- We can **assign** values in pandas using **selecting** tools above (like in numpy)
+
+	~~~ python
+top5_rank_revenue["revenues"] = 0 # whole columns change to 0
+top5_rank_revenue.loc["Sinopec Group", "revenues"] = 999 # 1 item
+	~~~
+- **boolean indexing**: 
+
+	~~~ python
+s_bool = df["<column>"] = 8 # gives a boolean series. 
+result = df[s_bool] # apply to whole df, DON'T use .loc
+result_name = df.loc[s_bool, "<column>"] # consider a column, USE .loc[]
+	~~~
+
+- Coupling
+
+	~~~ python
+f500.loc[f500["sector"] == "abc"] = "ABC"
+	~~~
+
+- `np.nan` = NaN
 
 
+## Mission 292 - Exploring Data with pandas
 
+{% include download.html content="[Download mission 292](/files/dataquest/mission-292.pdf)." %}
 
+~~~ python
+import pandas as pd
+import numpy as np
+~~~
+
+- pandas uses NumPy objects behind the scenes to store the data.
+- `.loc[]` vs `.iloc[]`
+	- **l**oc: **l**abel based selection
+	- **i**loc: **i**nteger position based selection
+- Select:
+	- an element: `df.iloc[2,0]`
+	- row: `df.iloc[1]`
+	- column: `df.iloc[:, 1]`
+	- slices: `df.iloc[1:5]`, `df.iloc[[1,3], 1:5']`
+	- list: `df.iloc[:,[1,2,5]]`
+- Slice:
+	- with `.loc[]`, the ending slide **is** included
+	- with `.iloc[]`, the dening slice **is not** included
+- The same for **series** but don't forget that series is 1-D
+- **Import data** ([cf](https://www.dataquest.io/m/292/exploring-data-with-pandas/3/reading-csv-files-with-pandas))
+
+	~~~ python
+# we want to use the 1st column as the row labels
+f500 = pd.read_csv("f500.csv", index_col=0)
+# remove the index name (text in the first line, first column)
+f500.index.name = None
+	~~~
+
+- Sort the rows of `f500` by columns `employees`
+
+	~~~ python
+sorted_emp = f500.sort_values("employees", ascending=False)
+	~~~
+
+- `s.str.contains("<str>")` : check if str is in s or not
+- `s.str.endwith("<str>")` : check if s ends with str or not
+- `s.str.startwith("<str>")`
+- `s.isnull()` or `s.notnull()` : check s contains NaN or null
+
+	~~~ python
+rev_change_null = f500[f500["revenue_change"].isnull()]
+print(rev_change_null[["company","country","sector"]])
+	~~~
+- <mark>Important</mark>
+
+	~~~ python
+  previously_ranked["rank","revenues"] # error
+  previously_ranked[["rank","revenues"]] # columns
+  previously_ranked.loc["rank","revenues"] # rows
+  previously_ranked.loc[:, ["rank","revenues"]] # columns
+
+  previously_ranked.loc["rank"] # dataframe
+  previously_ranked["rank"] # series
+
+  previously_ranked.loc["rank"] - previously_ranked.loc["prev_rank"] # 2 different columns (dataframe)
+  previously_ranked["rank"] - previously_ranked["prev_rank"] # 1 column (series)
+	~~~
