--- a/_posts/dataquest/2018-09-09-dataquest-2.md
+++ b/_posts/dataquest/2018-09-09-dataquest-2.md
@@ -241,7 +241,7 @@ sorted_emp = f500.sort_values("employees", ascending=False)
 rev_change_null = f500[f500["revenue_change"].isnull()]
 print(rev_change_null[["company","country","sector"]])
 	~~~
-- <mark>Important</mark>
+- <mark>Important</mark> about selecting
 
 	~~~ python
   previously_ranked["rank","revenues"] # error
@@ -255,3 +255,4 @@ print(rev_change_null[["company","country","sector"]])
   previously_ranked.loc["rank"] - previously_ranked.loc["prev_rank"] # 2 different columns (dataframe)
   previously_ranked["rank"] - previously_ranked["prev_rank"] # 1 column (series)
 	~~~
+
