--- a/_posts/it/2018-09-03-git-note.md
+++ b/_posts/it/2018-09-03-git-note.md
@@ -10,11 +10,17 @@ This note is used for my daily working routine with git.
 1. Set the information
 
 	~~~ bash
-	git config --global user.name "Dinh Anh Thi"
-	git config --global user.email "dinhanhthimail@gmail.com"
+git config --global user.name "Dinh Anh Thi"
+git config --global user.email "dinhanhthimail@gmail.com"
 	~~~
 
-2. Save github account as default `git config credential.helper store` then `git pull` for the first time input.
+2. Save github account as default 
+
+	~~~ bash
+git config credential.helper store
+	~~~
+
+	then `git pull` for the first time input.
 
 3. Create a repository: `git init <repo-name>`
 
@@ -31,10 +37,10 @@ This note is used for my daily working routine with git.
 9. Merge sub branch to master and replace master branch
 
 	~~~ bash
-	git checkout <nhanh>
-	git merge -s ours master
-	git checkout master
-	git merge <nhanh>
+git checkout <nhanh>
+git merge -s ours master
+git checkout master
+git merge <nhanh>
 	~~~
 
 10. Working with branches
@@ -42,3 +48,10 @@ This note is used for my daily working routine with git.
 	- Compare 2 branches: `git diff <src-branch> <compared-branch>`
 	- Delete: `git branch -d <branch>`
 	- Add description: `git branch --edit-description` (if you wanna exit Vim, press ESC then type `:q` to quit or `:wq` to quit and write)
+
+11. **Error**: `Could not resolve host: github.com`
+
+	~~~ bash
+git config --global --unset http.proxy 
+git config --global --unset https.proxy
+	~~~
